fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  overflow-y: hidden;
   width: 100%;
   display: flex;
   flex-direction: column;
